[package]
name = "events-api-http-server"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.37.0", features = [ "sync", "time", "macros", "rt-multi-thread", "signal" ] }
dotenvy = "0.15.7"
simple_logger = "5.0.0"
log = "0.4.21"
sqlx = { version = "0.7.4", features = [ "runtime-tokio", "tls-rustls", "postgres", "macros", "chrono", "rust_decimal" ] }
serde = { version = "1.0.200", features = [ "derive" ] }
serde_json = "1.0.116"
rust_decimal = "1.35.0"
chrono = { version = "0.4.38", features = [ "serde" ] }
actix-web = "4.5.1"
actix-cors = "0.7.0"
